<resources>
    <string name="app_name">DXBapps</string>
    <string name="new_order">New Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="orders">Orders</string>
    <string name="home">Home</string>
    <string name="how_it_works">How it works</string>
    <string name="about_us">about us</string>
    <string name="contact_us">contact us</string>
</resources>