<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.aariz.dxbapps.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.aariz.dxbapps.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/newOrderFragment"
        android:name="com.aariz.dxbapps.NewOrderFragment"
        android:label="@string/new_order"
        tools:layout="@layout/fragment_new_order" />
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.aariz.dxbapps.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.aariz.dxbapps.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>