<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_orders"
        android:icon="@drawable/ic_history"
        android:title="@string/orders"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new_order"
        android:enabled="false"
        android:title="" />
    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
        app:showAsAction="always" />
</menu>