<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginTop="-32dp"
        android:contentDescription="@string/home"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_bg"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/home"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/home"
        android:src="@drawable/ic_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:elevation="1dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_time_clock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:backgroundTint="@color/teal_200"
                android:drawableLeft="@drawable/ic_menu_orders"
                android:drawableRight="@drawable/ic_dark_next"
                android:padding="@dimen/dp_20"
                android:text="@string/orders"
                android:textAlignment="textStart"
                android:textColor="@color/purple_200"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btn_time_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_0"
                android:layout_marginEnd="@dimen/dp_10"
                android:backgroundTint="@color/purple_200"
                android:drawableLeft="@drawable/ic_htw"
                android:drawableRight="@drawable/ic_light_next"
                android:drawablePadding="@dimen/dp_12"
                android:padding="@dimen/dp_20"
                android:text="@string/how_it_works"
                android:textAlignment="textStart"
                android:textColor="@color/teal_200"
                app:iconTint="@color/teal_200"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btn_company_holidays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:backgroundTint="@color/teal_200"
                android:drawableLeft="@drawable/ic_about"
                android:drawableRight="@drawable/ic_dark_next"
                android:drawablePadding="@dimen/dp_12"
                android:padding="@dimen/dp_20"
                android:text="@string/about_us"
                android:textAlignment="textStart"
                android:textColor="@color/purple_200"
                app:iconTint="@color/purple_200"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btn_time_off_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_0"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/purple_200"
                android:drawableLeft="@drawable/ic_contact"
                android:drawableRight="@drawable/ic_light_next"
                android:drawablePadding="@dimen/dp_12"
                android:padding="@dimen/dp_20"
                android:text="@string/contact_us"
                android:textAlignment="textStart"
                android:textColor="@color/teal_200"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>